--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
-<h1><%= title %></h1>
+<body>
+  <div class="container-fluid">
+  <div class="home-heading text-center row">
+    <div class="home-heading-wrapper">
+      <h1>Creators thrive here.</h1>
+      <p>Kickstarter creators pursue bold ideas on their own terms — and make an impact on the world, too.</p>
+      <a class="btn btn-default" href="#">Read their stories</a>
+    </div>
+  </div>
+</div>
+</body>
